Direct commit to stable/11 to correctly setting the EIAC and IMS registers to the same values when processing interrupts.  This reverts a change made in r286831 that was not fully reverted in r311979

This resolves PR https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=211219

PR:		211219
Submitted by:	Franco Fitchner <franco@opnsense.org>
Approved by:	re (marius)

Former-commit-id: 91b58631bea28dd29778b6533dc8711459adb2bb